added stations_offline update method

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 python-blitzortung (0.9.5) unstable; urgency=low
 
   * Initial Release.
+  * added Builder Classes
+  * added Unittests
+  * added StationsOffline Db-Table
 
  -- Andreas Würl <blitzortung@tryb.de>  Sun, 29 Jan 2012 15:20:33 +0000
