--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+python-blitzortung (1.0.0SNAPSHOT201203231120) unstable; urgency=low
+
+
+ -- Andreas Würl <blitzortung@tryb.de>  Fri, 23 Mar 2012 11:06:33 +0100
+
 python-blitzortung (0.9.6) unstable; urgency=low
 
   * Initial Release.
