--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-python-blitzortung (1.0.0SNAPSHOT201203231120) unstable; urgency=low
+python-blitzortung (1.0.0SNAPSHOT201205032242) unstable; urgency=low
 
-  * replaced use of gnuplot with matplotlib calls
+  * adapted to tracker 1.0.2 renamed files
+  * removed plotting stuff
 
  -- Andreas Würl <blitzortung@tryb.de>  Fri, 23 Mar 2012 11:06:33 +0100
 
