--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 python-blitzortung (1.0.0SNAPSHOT201205032242) unstable; urgency=low
 
+  * added reducedArray output format for raster data
   * adapted to tracker 1.0.2 renamed files
   * removed plotting stuff
 
