--- a/debian/README
+++ b/debian/README
@@ -1,6 +1,6 @@
 The Debian Package python-blitzortung
 ----------------------------
 
-Comments regarding the Package
+Requires at least numpy 1.7 which has good 64 bit timestamp support.
 
  -- Andreas Würl <blitzortung@tryb.de>  Sun, 29 Jan 2012 15:20:33 +0000
