introduce injector DI

--- a/debian/README
+++ b/debian/README
@@ -1,6 +1,10 @@
 The Debian Package python-blitzortung
 ----------------------------
 
-Requires at least numpy 1.7 which has good 64 bit timestamp support.
+The following software has to be installed manually, as it is not available through debian/ubuntu packages at the moment:
+
+Requires numpy >= 1.7 and pandas >= 0.9 to have a finally usable 64 bit timestamp support.
+
+Requires injector.
 
  -- Andreas Würl <blitzortung@tryb.de>  Sun, 29 Jan 2012 15:20:33 +0000
