fixed handling of empty time strings

--- a/debian/README
+++ b/debian/README
@@ -5,6 +5,8 @@ The following software has to be installed manually, as it is not available thro
 
 Requires numpy >= 1.7 and pandas >= 0.9 to have a finally usable 64 bit timestamp support.
 
+Requires psycopg2 >= 2.5 to enable database access.
+
 Requires injector.
 
  -- Andreas Würl <blitzortung@tryb.de>  Sun, 29 Jan 2012 15:20:33 +0000
