--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 python-blitzortung (1.3.0) unstable; urgency=low
 
   * refactored and adapted blitzortung data import to new format
+  * split up db classes
 
- -- Andreas Wuerl <blitzortung@tryb.de>  THu, 22 Aug 2013 06:45:23 +0200
+ -- Andreas Wuerl <blitzortung@tryb.de>  THu, 16 Sep 2013 21:09:12 +0200
 
 python-blitzortung (1.2.0) unstable; urgency=low
 
