added build status

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+<p align="right>
+[![Build Status](https://travis-ci.org/wuan/bo-python.svg?branch=master)](https://travis-ci.org/wuan/bo-python)
+</p>
+
 The Debian Package python-blitzortung
 ----------------------------
 
