--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ python-blitzortung (1.3.0) unstable; urgency=low
   * removed obsolete code
   * renamed stroke to strike
   * python 3 compatibility
+  * improved stroke select performance
 
  -- Andreas Wuerl <blitzortung@tryb.de>  THu, 16 Sep 2013 21:09:12 +0200
 
