--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ python-blitzortung (1.4.0) unstable; urgency=low
 
   * speed optimizations
   * db module refactoring
+  * strike clustering
 
- -- Andreas Wuerl <blitzortung@tryb.de>  Mon, 11 Aug 2014 20:27:23 +0200
+ -- Andreas Wuerl <blitzortung@tryb.de>  Mon, 01 Sep 2014 21:12:35 +0200
 
 python-blitzortung (1.3.0) unstable; urgency=low
 
