--- a/debian/README
+++ b/debian/README
@@ -1,9 +1,23 @@
-The Debian Package python-blitzortung
-----------------------------
+python-blitzortung a python module for blitzortung.org related stuff
+--------------------------------------------------------------------
+
+# Introduction
+
+This modules contains the following independent components
+
+* strike and station data import from data.blitzortung.org
+* database setup and access for local storage of blitzortung.org data.
+* clustering of strike data
+
+Please have a look at https://github.com/wuan/bo-server for related scripts/cronjobs
+
+# Installation
 
 The following software has to be installed manually, as it is not available through debian/ubuntu packages at the moment:
 
 Requires numpy >= 1.7 and pandas >= 0.9 to have a finally usable 64 bit timestamp support.
+
+Scipy and fastcluster is required for the clustering
 
 Requires psycopg2 >= 2.5 to enable database access.
 
