--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-blitzortung (1.5.0) unstable; urgency=low
+
+  * use python properties instead of getters (this will break compatibility to earlier versions)
+
+ -- Andreas Wuerl <blitzortung@tryb.de>  Sun, 09 Aug 2015 10:36:12 +0200
+
 python-blitzortung (1.4.0) unstable; urgency=low
 
   * speed optimizations
