--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-blitzortung (1.6.0) unstable; urgency=low
+
+  * remove pandas dependency
+
+ -- Andreas Wuerl <blitzortung@tryb.de>  Wed, 29 Jun 2016 21:01:02 +0200
+
 python-blitzortung (1.5.0) unstable; urgency=low
 
   * use python properties instead of getters (this will break compatibility to earlier versions)
