update to python3

--- a/debian/README
+++ b/debian/README
@@ -1,4 +1,4 @@
-python-blitzortung a python module for blitzortung.org related stuff
+python3-blitzortung a python module for blitzortung.org related stuff
 --------------------------------------------------------------------
 
 # Introduction
