--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python3-blitzortung (1.7.0) unstable; urgency=low
 
   * update to Python 3
+  * remove outdated dependencies
 
  -- Andreas Wuerl <blitzortung@tryb.de>  Mon, 24 Jun 2019 21:57:32 +0200
 
