--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
+python3-blitzortung (1.7.1) unstable; urgency=low
+
+  * remove outdated dependencies
+
+ -- Andreas Wuerl <blitzortung@tryb.de>  Fre, 22 Jul 2022 20:41:21 +0200
+
 python3-blitzortung (1.7.0) unstable; urgency=low
 
   * update to Python 3
-  * remove outdated dependencies
 
  -- Andreas Wuerl <blitzortung@tryb.de>  Mon, 24 Jun 2019 21:57:32 +0200
 
